Add monitoring for the cache-clearing-service queue size
The cache clearing service reads from a RabbitMQ queue, which has
peaked at ~1,000,000 items recently. This commit adds some monitoring
via Icinga so that it's easier to see when the queue is "long".

The values are a complete guess, at the moment, it seems to be backing
up significantly, so hopefully this can be solved, and then the alert
values tuned to a more sensible range.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -373,6 +373,8 @@ govuk::apps::bouncer::unicorn_worker_processes: "8"
 
 govuk::apps::cache_clearing_service::enabled: true
 govuk::apps::cache_clearing_service::rabbitmq_hosts: [rabbitmq]
+govuk::apps::cache_clearing_service::rabbitmq::queue_size_critical_threshold: 10000
+govuk::apps::cache_clearing_service::rabbitmq::queue_size_warning_threshold: 1000
 
 govuk::apps::ckan::db_hostname: "postgresql-primary"
 govuk::apps::ckan::db::backend_ip_range: "%{hiera('environment_ip_prefix')}.3.0/24"
