Add Router API authentication
This adds the environment variables required by router-api
and content-store for use in GDS-SSO authentication.

Prior art that I want to follow: https://github.com/alphagov/govuk-puppet/pull/8426.

--- a/hieradata/class/router_backend.yaml
+++ b/hieradata/class/router_backend.yaml
@@ -1,5 +1,8 @@
 ---
 
+govuk::apps::router_api::oauth_id: "%{hiera('govuk::apps::router_api::oauth_id')}"
+govuk::apps::router_api::oauth_secret: "%{hiera('govuk::apps::router_api::oauth_secret')}"
+
 govuk::apps::router_api::mongodb_name: 'router'
 govuk::apps::router_api::mongodb_nodes:
   - 'router-backend-1.router'
