--- a/hieradata/node/warehouse-postgresql-1.backend.staging.publishing.service.gov.uk.yaml
+++ b/hieradata/node/warehouse-postgresql-1.backend.staging.publishing.service.gov.uk.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "push_content_performance_manager_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "3"
     action: "push"
