Add Draft Router API keys and access token
Following 25c0efb, its also necessary to provide a draft set
of keys and tokens for the router-api, as we run an instance
of the router-api in the draft stack.

--- a/hieradata_aws/class/draft_cache.yaml
+++ b/hieradata_aws/class/draft_cache.yaml
@@ -5,6 +5,9 @@ govuk::apps::authenticating_proxy::mongodb_nodes:
   - 'router-backend-2'
   - 'router-backend-3'
 
+govuk::apps::router_api::oauth_id: "%{hiera('govuk::apps::router_api::draft_oauth_id')}"
+govuk::apps::router_api::oauth_secret: "%{hiera('govuk::apps::router_api::draft_oauth_secret')}"
+
 govuk::apps::router_api::mongodb_name: 'draft_router'
 govuk::apps::router_api::mongodb_nodes:
   - 'router-backend-1'
