--- a/hieradata/class/draft_cache.yaml
+++ b/hieradata/class/draft_cache.yaml
@@ -5,6 +5,9 @@ govuk::apps::authenticating_proxy::mongodb_nodes:
   - 'router-backend-2.router'
   - 'router-backend-3.router'
 
+govuk::apps::router_api::oauth_id: "%{hiera('govuk::apps::router_api::draft_oauth_id')}"
+govuk::apps::router_api::oauth_secret: "%{hiera('govuk::apps::router_api::draft_oauth_secret')}"
+
 govuk::apps::router::mongodb_name: "%{hiera('govuk::apps::router_api::mongodb_name')}"
 govuk::apps::router::mongodb_nodes:
   - 'router-backend-1.router'
