--- a/development-vm/Procfile
+++ b/development-vm/Procfile
@@ -102,7 +102,7 @@ publishing-api-worker: govuk_setenv publishing-api        ./run_in.sh ../../publ
 # email-alert-monitor used port 3094
 # courts-frontend used port 3095
 # entity-extractor used port 3096
-event-store:           govuk_setenv event-store           ./run_in.sh ../../event-store    make run # port 3097
+# event-store used port 3097
 # policy-publisher used port 3098
 email-alert-frontend:  govuk_setenv email-alert-frontend  ./run_in.sh ../../email-alert-frontend bundle exec rails server -p 3099
 draft-content-store:   govuk_setenv draft-content-store   ./run_in.sh ../../content-store bundle exec rails server -p 3100 -P tmp/pids/draft-server.pid
