--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -952,7 +952,7 @@ govuk_sudo::sudo_conf:
   ubuntu:
     content: 'ubuntu ALL=(ALL) NOPASSWD:ALL'
 
-govuk_splunk::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+govuk_splunk::repos::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk_unattended_reboot::alert_hostname: 'alert'
 govuk_unattended_reboot::enabled: true
