add splunk module and test on aws staging frontend-calculator
add splunk user and group

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -952,6 +952,8 @@ govuk_sudo::sudo_conf:
   ubuntu:
     content: 'ubuntu ALL=(ALL) NOPASSWD:ALL'
 
+govuk_splunk::repos::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+
 govuk_unattended_reboot::alert_hostname: 'alert'
 govuk_unattended_reboot::enabled: true
 govuk_unattended_reboot::mongodb::enabled: true
