Trello-1904: add govuk_prometheus puppet module
This module is used to stand up the prometheus server instance in each
environment. When an instance with a role of prometheus is built this
module will be used to configure prometheus on it.

Also allowiing the prometheus node exporter to be installed in all AWS
environments.

@ronocg <conor.glynn@digital.cabinet-office.gov.uk>

--- a/spec/fixtures/hieradata/common.yaml
+++ b/spec/fixtures/hieradata/common.yaml
@@ -83,6 +83,9 @@ govuk_postgresql::monitoring::password: password
 
 govuk_ppa::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
+govuk_prometheus::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+govuk_prometheus_node_exporter::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+
 govuk_rabbitmq::monitoring_password: 'rabbit_monitor'
 govuk_rabbitmq::root_password: 'rabbit_root'
 govuk_rabbitmq::repo::apt_mirror_hostname: 'rabbit_repo'
