--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -783,6 +783,8 @@ govuk::node::s_transition_postgresql_slave::wale_private_gpg_key_fingerprint: "%
 
 govuk_postgresql::mirror::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 govuk_ppa::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+govuk_prometheus::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+govuk_prometheus_node_exporter::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk_sshkeys::deployment_keys:
   github.com:
