--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -840,6 +840,8 @@ govuk::node::s_warehouse_db_admin::apt_mirror_hostname: "%{hiera('apt_mirror_hos
 govuk_bundler::config::service: 'http://gemstash'
 
 govuk_postgresql::mirror::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+govuk_prometheus_node_exporter::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+govuk_prometheus::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 govuk_ppa::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk_sshkeys::deployment_keys:
