--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -371,6 +371,7 @@ govuk::apps::bouncer::nagios_memory_warning: 1400
 govuk::apps::bouncer::nagios_memory_critical: 1500
 govuk::apps::bouncer::unicorn_worker_processes: "8"
 
+govuk::apps::cache_clearing_service::alert_when_threads_exceed: 150
 govuk::apps::cache_clearing_service::enabled: true
 govuk::apps::cache_clearing_service::nagios_memory_warning: 2750
 govuk::apps::cache_clearing_service::nagios_memory_critical: 3000
