--- a/hieradata/node/cache-1.router.staging.publishing.service.gov.uk.yaml
+++ b/hieradata/node/cache-1.router.staging.publishing.service.gov.uk.yaml
@@ -6,3 +6,4 @@
 router::gor::replay_targets:
   'www-origin.integration.publishing.service.gov.uk':
     ip: '31.210.245.98'
+  'www-origin.blue.staging.govuk.digital': {}
