--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -821,6 +821,7 @@ govuk_ci::master::pipeline_jobs:
   govuk_admin_template: {}
   govuk_ab_testing: {}
   govuk_app_config: {}
+  govuk-cdn-config: {}
   govuk-content-schema-test-helpers: {}
   govuk-dummy_content_store: {}
   govuk-dependencies: {}
