--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -852,6 +852,7 @@ govuk_ci::master::pipeline_jobs:
   rails_translation_manager: {}
   router-data: {}
   seal: {}
+  search-api: {}
   shared_mustache: {}
   slimmer: {}
   smokey: {}
