--- a/hieradata_aws/class/staging/content_store.yaml
+++ b/hieradata_aws/class/staging/content_store.yaml
@@ -3,3 +3,5 @@
 icinga::client::check_pings::endpoints:
    router-api:
      ip: 10.2.1.253
+
+govuk::apps::content_store::create_default_nginx_config: true
