--- a/development-vm/Procfile
+++ b/development-vm/Procfile
@@ -33,7 +33,7 @@ whitehall-worker:      govuk_setenv whitehall             ./run_in.sh ../../whit
 feedback:              govuk_setenv feedback              ./run_in.sh ../../feedback       bundle exec rails server -p 3028
 # errbit used 3029
 support:               govuk_setenv support               ./run_in.sh ../../support        bundle exec rails server -p 3031
-# publicapi uses port 3032
+# publicapi used port 3032
 # contracts-finder used port 3033
 # url-arbiter used port 3034
 travel-advice-publisher: govuk_setenv travel-advice-publisher ./run_in.sh ../../travel-advice-publisher bundle exec rails server -p 3035
