Shift additional sudoers entries for govuk_env_sync
- We require additional sudoers configuration to allow the
govuk_env_sync script to be executed by the deploy user/via Jenkins.

- The intially added configuration did start a tug-of-war with the sudo
module.

- This moves the problematic config from the govuk_env_sync and moves it
into govuk_sudo hieradata.

solo: @schmie

--- a/hieradata_aws/class/mongo.yaml
+++ b/hieradata_aws/class/mongo.yaml
@@ -1,4 +1,9 @@
 ---
+govuk_sudo::sudo_conf:
+  env-sync-script:
+    content: 'Cmnd_Alias BACKUP=/usr/local/bin/govuk_env_sync.sh'
+  deploy-user-env-sync:
+    content: 'deploy ALL=(govuk-backup) NOPASSWD:BACKUP'
 
 govuk_safe_to_reboot::can_reboot: 'overnight'
 govuk_safe_to_reboot::reason: 'Secondaries will reboot overnight if cluster is healthy'
