--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -179,6 +179,10 @@ govuk::node::s_backend_lb::whitehall_backend_servers:
   - 'whitehall-backend-2.backend'
   - 'whitehall-backend-3.backend'
   - 'whitehall-backend-4.backend'
+govuk::node::s_backend_lb::whitehall_frontend_servers:
+  - 'whitehall-frontend-1.frontend'
+  - 'whitehall-frontend-2.frontend'
+  - 'whitehall-frontend-3.frontend'
 govuk::node::s_backend_lb::perfplat_public_app_domain: 'performance.service.gov.uk'
 
 govuk::node::s_backup::offsite_backups: true
