--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -156,6 +156,10 @@ govuk::node::s_backend_lb::whitehall_backend_servers:
   - 'whitehall-backend-2.backend'
   - 'whitehall-backend-3.backend'
   - 'whitehall-backend-4.backend'
+govuk::node::s_backend_lb::whitehall_frontend_servers:
+  - 'whitehall-frontend-1.frontend'
+  - 'whitehall-frontend-2.frontend'
+  - 'whitehall-frontend-3.frontend'
 govuk::node::s_backend_lb::perfplat_public_app_domain: 'staging.performance.service.gov.uk'
 govuk::node::s_cache::real_ip_header: 'True-Client-Ip'
 govuk::node::s_frontend_lb::calculators_frontend_servers:
