--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -873,6 +873,7 @@ govuk_ci::master::pipeline_jobs:
   shared_mustache: {}
   slimmer: {}
   smokey: {}
+  special-route-publisher: {}
   transition-config: {}
   ubuntu_unused_kernels:
     repo_owner: 'gds-operations'
