Add agnieszkadufrat manifest for integration and CI

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -161,6 +161,7 @@ router::nginx::check_requests_warning: '@0.5'
 router::nginx::check_requests_critical: '@0.25'
 
 users::usernames:
+  - agnieszkadufrat
   - alangabbianelli
   - alexandrujurubita
   - alextorrance
