bring up canary backend in AWS Staging and Production

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -19,6 +19,7 @@ node_class: &node_class
     apps:
       - asset-manager
       - cache-clearing-service
+      - canary-backend
       - transition
       - imminence
       - kibana
