--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -219,5 +219,6 @@ users::usernames:
   - vanitabarrett
   - vitaliemogoreanu
   - williamfranklin
+  - felicitymoon
 
 nginx::config::stack_network_prefix: '10.1.0'
