--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -54,6 +54,8 @@ govuk::apps::whitehall::highlight_words_to_avoid: true
 
 govuk_search::gor::replay_target_hosts:
   - 'http://localhost:3233'
+govuk_search::monitoring::es_port: '80'
+govuk_search::monitoring::es_host: 'http://elasticsearch5.blue.integration.govuk-internal.digital'
 
 govuk::deploy::aws_ses_smtp_host: 'email-smtp.eu-west-1.amazonaws.com'
 govuk::deploy::config::errbit_environment_name: "integration-%{hiera('stackname')}-aws"
