--- a/hieradata_aws/class/staging/warehouse_db_admin.yaml
+++ b/hieradata_aws/class/staging/warehouse_db_admin.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "pull_content_performance_manager_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "45"
     action: "pull"
